# handlers/crud_handlers.go
@@ -431,84 +431,5 @@ func (h *StylistHandler) Delete(c *gin.Context) {
 	utils.RespondSuccess(c, "Stylist deleted", nil)
 }
 
-// ===== Customer Handler =====
-type CustomerHandler struct {
-	service *services.CustomerService
-}
-
-func NewCustomerHandler(service *services.CustomerService) *CustomerHandler {
-	return &CustomerHandler{service: service}
-}
-
-func (h *CustomerHandler) Create(c *gin.Context) {
-	var req dto.CreateCustomerRequest
-	if err := c.ShouldBindJSON(&req); err != nil {
-		utils.RespondValidationError(c, err.Error())
-		return
-	}
-	customer, err := h.service.Create(req)
-	if err != nil {
-		utils.RespondError(c, http.StatusInternalServerError, err.Error())
-		return
-	}
-	utils.RespondCreated(c, "Customer created", customer)
-}
-
-func (h *CustomerHandler) GetAll(c *gin.Context) {
-	page, pageSize := utils.GetPaginationParams(c)
-	customers, total, err := h.service.GetAll(utils.GetOffset(page, pageSize), pageSize)
-	if err != nil {
-		utils.RespondError(c, http.StatusInternalServerError, err.Error())
-		return
-	}
-	utils.RespondPaginated(c, customers, page, pageSize, total)
-}
-
-func (h *CustomerHandler) GetByID(c *gin.Context) {
-	id, err := uuid.Parse(c.Param("id"))
-	if err != nil {
-		utils.RespondValidationError(c, "Invalid ID")
-		return
-	}
-	customer, err := h.service.GetByID(id)
-	if err != nil {
-		utils.RespondNotFound(c, "Customer not found")
-		return
-	}
-	utils.RespondSuccess(c, "", customer)
-}
-
-func (h *CustomerHandler) Update(c *gin.Context) {
-	id, err := uuid.Parse(c.Param("id"))
-	if err != nil {
-		utils.RespondValidationError(c, "Invalid ID")
-		return
-	}
-	var req dto.UpdateCustomerRequest
-	if err := c.ShouldBindJSON(&req); err != nil {
-		utils.RespondValidationError(c, err.Error())
-		return
-	}
-	customer, err := h.service.Update(id, req)
-	if err != nil {
-		utils.RespondError(c, http.StatusInternalServerError, err.Error())
-		return
-	}
-	utils.RespondSuccess(c, "Customer updated", customer)
-}
-
-func (h *CustomerHandler) Delete(c *gin.Context) {
-	id, err := uuid.Parse(c.Param("id"))
-	if err != nil {
-		utils.RespondValidationError(c, "Invalid ID")
-		return
-	}
-	if err := h.service.Delete(id); err != nil {
-		utils.RespondError(c, http.StatusInternalServerError, err.Error())
-		return
-	}
-	utils.RespondSuccess(c, "Customer deleted", nil)
-}
-
 // Unused import suppressor
 var _ = models.RoleAdmin
